<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="in.zollet.abhilash.reached.AddGeoFenceFragment"
              android:orientation="vertical"
              android:minWidth="280dp"
              android:paddingBottom="@dimen/activity_vertical_margin_add"
              android:paddingLeft="@dimen/activity_horizontal_margin_add"
              android:paddingRight="@dimen/activity_horizontal_margin_add"
              android:paddingTop="@dimen/activity_vertical_margin_add">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_geo_fence"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name_geofence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/name_geofence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_geofence"
            tools:text="Work"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText

            android:id="@+id/latitudeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latitude"
            tools:text="Latitude"
            android:focusable="false"
            /> <!--android:focusable="false"-->
    </android.support.design.widget.TextInputLayout>
    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/selectPlace"
        android:text="tap to Select a Location"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        />-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/longitudeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_longitude"
            tools:text="Longitude"

            android:focusable="false"

            /> <!--android:singleLine="true"
            android:focusable="false"-->
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_radius"
            android:singleLine="true"
            tools:text="Radius"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>

