<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"


              tools:context="com.example.abhilash.newsforyou.UI.FeedbackActivityFragment"
              tools:showIn="@layout/activity_feedback">
    <!--android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="20dp"-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/feedback_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/feedback_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/PrimaryText"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subject"
            android:singleLine="true"
            tools:text="Type your feedback here"/>
        <!--android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"-->
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:ems="10"
            android:hint="@string/hint_body"
            android:inputType="textMultiLine"
            tools:text="A Policman keeps watch near the holy artisian bakery and the o'kithcen restrurant in dhaka after a terror attack. (Retures) Bangaldeshi investigators are focusing on a suspected militant and a survivor as part of ther frantic search for clues in friday"/>
    </android.support.design.widget.TextInputLayout>


<!--    <Button
        android:id="@+id/send"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:layout_marginBottom="25dp"/>-->
</LinearLayout>

</ScrollView>
